--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>批量 EXIF 编辑器</title>
-    <!-- 添加 viewport 元标签 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Batch EXIF Editor</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
             font-size: 16px;
             margin-right: 10px;
-            margin-bottom: 10px;
         }
-        #status, #result, #progress, #downloadLink {
+        #status, #result, #progress {
             margin-bottom: 20px;
-            word-wrap: break-word;
         }
     </style>
 </head>
 <body>
-    <h1>批量 EXIF 编辑器</h1>
+    <h1>Batch EXIF Editor</h1>
     <div id="status">选择的文件数: 0</div>
     <div id="result">状态: 等待选择文件</div>
     <div id="progress"></div>
-    <div id="downloadLink"></div>
     <input type="file" id="fileInput" multiple accept="image/jpeg,image/png" style="display: none;">
     <button onclick="document.getElementById('fileInput').click()">选择照片</button>
     <button onclick="processImages()">处理</button>
@@ -53,22 +49,17 @@
 
             document.getElementById('result').textContent = '状态：正在处理...';
             document.getElementById('progress').textContent = '';
-            document.getElementById('downloadLink').innerHTML = '';
 
             let processed = 0;
             let failed = 0;
             const zip = new JSZip();
             const batchSize = 10; // 每批处理的文件数
 
-            // 生成不重复的随机时间数组并打乱顺序
-            const uniqueDates = generateUniqueRandomDates(selectedFiles.length);
-
             for (let i = 0; i < selectedFiles.length; i += batchSize) {
                 const batch = selectedFiles.slice(i, i + batchSize);
-                await Promise.all(batch.map(async (file, index) => {
+                await Promise.all(batch.map(async (file) => {
                     try {
-                        const randomDate = uniqueDates[i + index]; // 获取不重复的随机时间
-                        const result = await processImage(file, randomDate);
+                        const result = await processImage(file);
                         zip.file(result.fileName, result.content.split(',')[1], {base64: true});
                         processed++;
                     } catch (error) {
@@ -82,25 +73,21 @@
             document.getElementById('result').textContent = `状态：正在生成ZIP文件...`;
 
             try {
-                if (processed > 0) { // 仅在有成功处理的文件时生成ZIP
-                    const content = await zip.generateAsync({type:"blob"});
-                    const blobUrl = URL.createObjectURL(content);
+                const content = await zip.generateAsync({type:"blob"});
+                const blobUrl = URL.createObjectURL(content);
 
-                    // 创建一个下载链接
-                    const link = document.createElement('a');
-                    link.href = blobUrl;
-                    link.download = "modified_images.zip";
-                    link.textContent = "点击这里下载ZIP文件";
+                // 创建一个下载链接
+                const link = document.createElement('a');
+                link.href = blobUrl;
+                link.download = "modified_images.zip";
+                link.textContent = "点击这里下载ZIP文件";
 
-                    // 将链接添加到页面
-                    const downloadLinkDiv = document.getElementById('downloadLink');
-                    downloadLinkDiv.innerHTML = '';
-                    downloadLinkDiv.appendChild(link);
+                // 将链接添加到页面
+                const downloadLinkDiv = document.getElementById('result');
+                downloadLinkDiv.innerHTML = '';
+                downloadLinkDiv.appendChild(link);
 
-                    document.getElementById('result').textContent = `状态：完成。成功处理: ${processed}, 失败: ${failed}`;
-                } else {
-                    document.getElementById('result').textContent = `状态：所有文件处理失败，请检查文件格式。`;
-                }
+                document.getElementById('result').textContent = `状态：完成。成功处理: ${processed}, 失败: ${failed}`;
             } catch (error) {
                 console.error('生成ZIP文件时出错:', error);
                 document.getElementById('result').textContent = `状态：生成ZIP文件失败。请尝试减少文件数量或刷新页面重试。`;
@@ -112,56 +99,7 @@
             document.getElementById('progress').textContent = `进度: ${progress}% (成功: ${processed}, 失败: ${failed})`;
         }
 
-        function generateUniqueRandomDates(count) {
-            const dates = [];
-            const now = new Date();
-            const past4Days = new Date(now.getTime() - 4 * 24 * 60 * 60 * 1000); // 4天前
-
-            const usedTimes = new Set();
-
-            while (dates.length < count) {
-                const randomTime = randomDateInRange(past4Days, now);
-                const timeKey = randomTime.getTime();
-                if (!usedTimes.has(timeKey)) {
-                    usedTimes.add(timeKey);
-                    dates.push(randomTime);
-                }
-            }
-
-            // 打乱日期数组顺序
-            shuffleArray(dates);
-
-            return dates;
-        }
-
-        function randomDateInRange(start, end) {
-            // 随机选择一天的日期
-            const startMs = start.getTime();
-            const endMs = end.getTime();
-            const randomDayMs = startMs + Math.random() * (endMs - startMs);
-            const randomDay = new Date(randomDayMs);
-
-            // 强制设置随机时间在当天的 7:00 到 17:30 之间
-            const startHour = 7;
-            const endHour = 17;
-            const randomHour = startHour + Math.floor(Math.random() * (endHour - startHour + 1));
-            const randomMinute = randomHour === endHour ? Math.floor(Math.random() * 31) : Math.floor(Math.random() * 60);
-
-            randomDay.setHours(randomHour);
-            randomDay.setMinutes(randomMinute);
-            randomDay.setSeconds(Math.floor(Math.random() * 60)); // 随机设置秒数
-
-            return randomDay;
-        }
-
-        function shuffleArray(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-        }
-
-        function processImage(file, randomDate) {
+        function processImage(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
                 reader.onload = function(e) {
@@ -170,19 +108,27 @@
                         let newFileName = '';
                         let newFileContent = e.target.result;
 
+                        // 生成随机数据
+                        const now = new Date();
+                        const twoDaysAgo = new Date(now.getTime() - 2 * 24 * 60 * 60 * 1000);
+                        const randomDate = new Date(twoDaysAgo.getTime() + Math.random() * (now.getTime() - twoDaysAgo.getTime()));
+
+                        // 确保时间在早上7点到下午5点半之间
+                        const startHour = 7;
+                        const endHour = 17;
+                        const randomHour = startHour + Math.floor(Math.random() * (endHour - startHour + 1));
+                        const randomMinute = randomHour === endHour ? Math.floor(Math.random() * 31) : Math.floor(Math.random() * 60);
+
+                        randomDate.setHours(randomHour);
+                        randomDate.setMinutes(randomMinute);
+                        randomDate.setSeconds(Math.floor(Math.random() * 60)); // 随机设置秒数
+
                         const isoValue = Math.floor(Math.random() * 19) * 25 + 50;
-
-                        // 曝光时间数组，确保不超过0.125秒（即1/8秒）
-                        const exposureTimes = [
-                            [1, 8000], [1, 4000], [1, 2000], [1, 1000], [1, 500],
-                            [1, 250], [1, 125], [1, 60], [1, 30], [1, 15],
-                            [1, 8]
-                        ];
-                        const exposureTime = exposureTimes[Math.floor(Math.random() * exposureTimes.length)];
-
-                        // 确保焦距只能是26mm或70mm
+                        const exposureTime = (Math.floor(Math.random() * 231) + 125) / 10000;
+                        
+                        // 修复：确保焦距只能是26mm或70mm
                         const focalLength = Math.random() < 0.5 ? 26 : 70;
-                        const fNumber = focalLength === 26 ? [18, 10] : [24, 10]; // f/1.8 或 f/2.4
+                        const fNumber = focalLength === 26 ? 1.8 : 2.4;
 
                         if (fileType === 'image/jpeg') {
                             let exifObj = piexif.load(e.target.result);
@@ -192,16 +138,12 @@
                             exifObj["0th"][piexif.ImageIFD.Make] = "samsung";
                             exifObj["Exif"][piexif.ExifIFD.DateTimeOriginal] = formatDate(randomDate);
                             exifObj["Exif"][piexif.ExifIFD.ISOSpeedRatings] = isoValue;
-                            exifObj["Exif"][piexif.ExifIFD.ExposureTime] = exposureTime;
-
+                            exifObj["Exif"][piexif.ExifIFD.ExposureTime] = [exposureTime * 10000, 10000];
+                            
                             // 设置焦距、光圈和曝光补偿
-                            exifObj["Exif"][piexif.ExifIFD.FocalLength] = [focalLength, 1];
-                            exifObj["Exif"][piexif.ExifIFD.FNumber] = fNumber;
-                            exifObj["Exif"][piexif.ExifIFD.ExposureBiasValue] = [0, 1]; // 0.00 EV
-                            exifObj["Exif"][piexif.ExifIFD.FocalLengthIn35mmFilm] = focalLength;
-
-                            // 添加 ExifVersion 标签，值为 "0220"
-                            exifObj["Exif"][piexif.ExifIFD.ExifVersion] = '0220'; // 正确的方式
+                            exifObj["Exif"][piexif.ExifIFD.FocalLength] = [focalLength * 10, 10];
+                            exifObj["Exif"][piexif.ExifIFD.FNumber] = [fNumber * 10, 10];
+                            exifObj["Exif"][piexif.ExifIFD.ExposureBiasValue] = [0, 100]; // 0.00 EV
 
                             // 将修改后的EXIF数据写回图像
                             const exifBytes = piexif.dump(exifObj);
@@ -209,19 +151,13 @@
                             newFileName = `modified_${file.name}`;
                         } else if (fileType === 'image/png') {
                             // 对于PNG，我们将元数据添加到文件名中
-                            const fNumberValue = fNumber[0] / fNumber[1];
-                            newFileName = `SM-F9460_samsung_${formatDateForFileName(randomDate)}_ISO${isoValue}_${focalLength}mm_f${fNumberValue}_${file.name}`;
-                        } else {
-                            throw new Error('不支持的文件类型');
+                            newFileName = `SM-F9460_samsung_${formatDateForFileName(randomDate)}_ISO${isoValue}_${focalLength}mm_f${fNumber}_${file.name}`;
                         }
 
                         resolve({fileName: newFileName, content: newFileContent});
                     } catch (error) {
                         reject(error);
                     }
-                };
-                reader.onerror = function() {
-                    reject(new Error('文件读取错误'));
                 };
                 reader.readAsDataURL(file);
             });
