--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                 let randomTime;
                 do {
                     randomTime = randomDateInRange(past72Hours, now);
+                    // 添加一个随机的偏移（1到30分钟之间的随机数）
+                    const randomOffset = Math.floor(Math.random() * 30 + 1) * 60 * 1000;
+                    randomTime = new Date(randomTime.getTime() + randomOffset);
                 } while (randomTime.getHours() * 60 * 60 * 1000 + randomTime.getMinutes() * 60 * 1000 < startHour || randomTime.getHours() * 60 * 60 * 1000 + randomTime.getMinutes() * 60 * 1000 > endHour);
                 const timeKey = randomTime.getTime();
                 if (!usedTimes.has(timeKey)) {
